--- a/.gitignore
+++ b/.gitignore
@@ -1,248 +1,8 @@
-# Dependencies
-/node_modules
-/node_modules/
-/npm-debug.log*
-/yarn-debug.log*
-/yarn-error.log*
-/.pnp
-.pnp.js
-/.pnp.js
-
-# Production builds
+# Build files
 /build
-/dist
-/.next
-/out
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env.*
+# Shell scripts (if you don't want to commit them)
+*.sh
 
-# Logs
-/logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
-
-# Runtime data
-/pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-/coverage
-/.nyc_output
-
-# Dependency directories
-/node_modules/
-/jspm_packages/
-
-# Optional npm cache directory
-/.npm
-
-# Optional eslint cache
-/.eslintcache
-
-# Optional REPL history
-/.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-/.yarn-integrity
-
-# dotenv environment variables file
-/.env
-/.env.test
-/.env.production
-
-# Stores VSCode versions used for testing VSCode extensions
-/.vscode-test
-
-# System files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-Desktop.ini
-
-# IDE and editor files
-# VSCode
-.vscode/*
-!.vscode/extensions.json
-.vscode/settings.json
-.vscode/tasks.json
-.vscode/launch.json
-.vscode/extensions.json
-
-# JetBrains IDEs (IntelliJ, WebStorm, etc.)
-.idea/
-*.iws
-*.iml
-*.ipr
-
-# Sublime Text
-*.sublime-project
-*.sublime-workspace
-
-# Eclipse
-.settings/
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.project
-.loadpath
-
-# NetBeans
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-# OS generated files
-[Tt]humbs.db
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# MacOS
-*.DS_Store
-.AppleDouble
-.LSOverride
-
-# Linux
-*~
-
-# Temporary files
-*.tmp
-*.temp
-*.temp.js
-*.temp.css
-
-# Cache files
-.parcel-cache/
-.cache/
-.rollup.cache/
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-.env.test
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Gatsby files
-.cache/
-public
-
-# Vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless/
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Cloudflare Pages
-functions/
-_worker.js
-
-# Local development
-.local
-
-# API keys and sensitive data (safety measure)
-*_key.txt
-*_keys.txt
-*_secret.txt
-*_secrets.txt
-*_token.txt
-*_tokens.txt
-config.js
-credentials.json
-service-account-key.json
-
-# Backup files
-*.backup
-*.bak
-
-# Temporary folders
-tmp/
-temp/
-
-# Package lock files (choose one - comment out the ones you don't use)
-# package-lock.json   # if you use npm
-# yarn.lock           # if you use yarn
-# pnpm-lock.yaml      # if you use pnpm
-
-# Build files from various frameworks
-/.svelte-kit
-/tsconfig.tsbuildinfo
-/.vuepress
+# Cloudflare specific
+.cfignore
