--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "build": "echo 'Building static site...' && find . -name '*.html' -o -name '*.css' -o -name '*.js' | head -5 && echo 'Build complete!'",
-    "dev": "echo 'Development mode'"
+    "build": "echo 'Building static site...' && find . -name '*.html' -o -name '*.css' -o -name '*.js' | head -5 && echo 'Build complete!'"
   },
   "devDependencies": {}
 }
