--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "so-rawan-hilang",
   "version": "1.0.0",
   "description": "Sistem Rekap SO Rawan Hilang",
+  "type": "module",
   "main": "public/index.html",
   "scripts": {
     "dev": "wrangler pages dev public --compatibility-date=2024-01-01",
     "deploy": "wrangler pages deploy public"
   },
   "dependencies": {
-    "googleapis": "^126.0.1"
+    "googleapis": "^126.0.1",
+    "google-auth-library": "^9.0.0"
   },
   "devDependencies": {
     "wrangler": "^3.0.0"
