--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,11 +2,18 @@ name = "so-rawan-hilang"
 compatibility_date = "2024-01-01"
 pages_build_output_dir = "./public"
 
+[env.production]
+vars = { 
+  SPREADSHEET_ID = "YOUR_SPREADSHEET_ID",
+  LIST_SO_SHEET = "List_so",
+  ABSENSI_SHEET = "Absensi", 
+  SO_RAWAN_SHEET = "SoRawan",
+  GOOGLE_SERVICE_ACCOUNT = "YOUR_SERVICE_ACCOUNT_JSON"
+}
+
 [env.production.vars]
 SPREADSHEET_ID = "YOUR_SPREADSHEET_ID"
 LIST_SO_SHEET = "List_so"
 ABSENSI_SHEET = "Absensi"
 SO_RAWAN_SHEET = "SoRawan"
-
-# Service Account credentials (akan di-set via Cloudflare Dashboard)
 GOOGLE_SERVICE_ACCOUNT = "YOUR_SERVICE_ACCOUNT_JSON"
