--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "so-rawan-hilang",
-  "version": "1.0.0",
-  "description": "Sistem Rekap SO Rawan Hilang",
+  "version": "1.1.0",
+  "description": "Sistem Rekap SO Rawan Hilang - Cloudflare Pages",
   "type": "module",
   "main": "public/index.html",
   "scripts": {
@@ -14,5 +14,8 @@
   },
   "devDependencies": {
     "wrangler": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
