--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -1,5 +1,6 @@
 name = "so-rawan-hilang-worker"
-compatibility_date = "2024-01-15"
+main = "worker.js"
+compatibility_date = "2025-11-20"
 compatibility_flags = ["nodejs_compat"]
 
 [vars]
