--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -1,14 +1,14 @@
-{
-  "name": "so-rawan-worker",
-  "version": "1.0.0",
-  "description": "Cloudflare Worker untuk aplikasi Rekap SO Rawan Hilang",
-  "main": "worker.js",
-  "scripts": {
-    "dev": "wrangler dev",
-    "deploy": "wrangler deploy"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "wrangler": "^3.0.0"
-  }
-}
+name = "so-rawan-hilang-worker"
+compatibility_date = "2024-01-01"
+
+# Variables untuk Google Sheets API
+[vars]
+SPREADSHEET_ID = "your-spreadsheet-id-here"
+
+# Environment variables (harus di-set di Cloudflare Dashboard)
+[env.production.vars]
+SPREADSHEET_ID = "your-spreadsheet-id-here"
+
+# Config untuk development
+[env.development]
+# variables dapat di-set secara lokal
