--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -1,4 +1,4 @@
-name = "so-rawan-hilang-worker"
+name = "so-rawan-website"
 compatibility_date = "2024-01-01"
 
 # Variables untuk Google Sheets API
