--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -1,5 +1,6 @@
-name = "so-rawan-website"
+name = "so-rawan-hilang-worker"
 compatibility_date = "2024-01-01"
+compatibility_flags = ["nodejs_compat"]
 
 # Variables untuk Google Sheets API
 [vars]
@@ -8,7 +9,3 @@ SPREADSHEET_ID = "your-spreadsheet-id-here"
 # Environment variables (harus di-set di Cloudflare Dashboard)
 [env.production.vars]
 SPREADSHEET_ID = "your-spreadsheet-id-here"
-
-# Config untuk development
-[env.development]
-# variables dapat di-set secara lokal
