--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,20 +1,11 @@
-name = "so-rawan-worker"
-compatibility_date = "2023-10-01"
-compatibility_flags = [ "nodejs_compat" ]
+name = 'so-rawan-website'
+compatibility_date = '2024-01-15'
+compatibility_flags = ['nodejs_compat']
+main = 'worker/worker.js'
 
-# Environment variables
-[vars]
-SPREADSHEET_ID = "your-spreadsheet-id-here"
-SERVICE_ACCOUNT_EMAIL = "your-service-account-email@project.iam.gserviceaccount.com"
-
-# Secrets (set using wrangler secret put)
-# PRIVATE_KEY will be set as secret
-
-[env.production]
-workers_dev = false
-zone_id = "your-zone-id"
-route = "api.yourdomain.com/*"
-
-# Untuk development
 [env.development]
 workers_dev = true
+
+[vars]
+SPREADSHEET_ID = 'your-spreadsheet-id-here'
+SERVICE_ACCOUNT_EMAIL = 'your-service-account@project.iam.gserviceaccount.com'
