--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,28 +1,16 @@
-name = "so-rawan-website"
-main = "worker/worker.js"
-compatibility_date = "2024-01-15"
-compatibility_flags = ["nodejs_compat"]
+name = 'so-rawan-website'
+compatibility_date = '2024-01-15'
+compatibility_flags = ['nodejs_compat']
+main = 'worker/worker.js'
 
-# ===============================
-# ENV: DEVELOPMENT
-# ===============================
 [env.development]
 workers_dev = true
 
-[env.development.vars]
-SPREADSHEET_ID = "16hi5AoG-CstZ-gDSKLIcJZ_SkcoCn-caVRRMIRA-d5Y"
-SERVICE_ACCOUNT_EMAIL = "your-service-account@project.iam.gserviceaccount.com"
-NODE_ENV = "development"
+[vars]
+NODE_ENV = 'development'
 
-# ===============================
-# ENV: PRODUCTION
-# ===============================
 [env.production]
 workers_dev = false
-zone_id = "your-zone-id-here"
-routes = ["api.yourdomain.com/*"]
 
-[env.production.vars]
-SPREADSHEET_ID = "16hi5AoG-CstZ-gDSKLIcJZ_SkcoCn-caVRRMIRA-d5Y"
-SERVICE_ACCOUNT_EMAIL = "your-service-account@project.iam.gserviceaccount.com"
-NODE_ENV = "production"
+[vars]
+NODE_ENV = 'production'
