--- a/package.json
+++ b/package.json
@@ -1,27 +1,12 @@
 {
   "name": "so-rawan-website",
   "version": "1.0.0",
-  "description": "Website untuk input data SO Rawan Hilang terintegrasi dengan Google Sheets",
   "main": "worker/worker.js",
-  "scripts": {
-    "dev": "wrangler dev",
-    "deploy": "wrangler deploy",
-    "deploy:prod": "wrangler deploy --env production",
-    "preview": "wrangler dev --env development",
-    "build": "echo 'No build step required'"
-  },
+  "license": "MIT",
   "dependencies": {
-    "google-spreadsheet": "^4.1.1"
+    "google-spreadsheet": "^4.1.5"
   },
-  "devDependencies": {
-    "wrangler": "^3.15.0"
-  },
-  "keywords": [
-    "google-sheets",
-    "stock-opname",
-    "cloudflare-workers",
-    "cloudflare-pages"
-  ],
-  "author": "Your Name",
-  "license": "MIT"
+  "scripts": {
+    "deploy": "npx wrangler deploy"
+  }
 }
