--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,16 +1,24 @@
-name = 'so-rawan-website'
-compatibility_date = '2024-01-15'
-compatibility_flags = ['nodejs_compat']
-main = 'worker/worker.js'
+name = "so-rawan-website"
+main = "worker/worker.js"
+compatibility_date = "2024-11-21"
+compatibility_flags = ["nodejs_compat"]
 
+# DEVELOPMENT ENVIRONMENT (for *.workers.dev)
 [env.development]
 workers_dev = true
 
-[vars]
-NODE_ENV = 'development'
+[env.development.vars]
+SPREADSHEET_ID = "16hi5AoG-CstZ-gDSKLIcJZ_SkcoCn-caVRRMIRA-d5Y"
+SERVICE_ACCOUNT_EMAIL = "your-service-account@project.iam.gserviceaccount.com"
+NODE_ENV = "development"
 
+# PRODUCTION ENVIRONMENT (for your custom domain)
 [env.production]
 workers_dev = false
+zone_id = "your-zone-id-here"
+routes = ["api.yourdomain.com/*"]
 
-[vars]
-NODE_ENV = 'production'
+[env.production.vars]
+SPREADSHEET_ID = "16hi5AoG-CstZ-gDSKLIcJZ_SkcoCn-caVRRMIRA-d5Y"
+SERVICE_ACCOUNT_EMAIL = "your-service-account@project.iam.gserviceaccount.com"
+NODE_ENV = "production"
