--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,9 @@ main = "worker/worker.js"
 compatibility_date = "2024-11-21"
 compatibility_flags = ["nodejs_compat"]
 
-# DEVELOPMENT ENVIRONMENT (for *.workers.dev)
+# ==========================================================
+# DEVELOPMENT ENVIRONMENT (for workers.dev)
+# ==========================================================
 [env.development]
 workers_dev = true
 
@@ -12,7 +14,9 @@ SPREADSHEET_ID = "16hi5AoG-CstZ-gDSKLIcJZ_SkcoCn-caVRRMIRA-d5Y"
 SERVICE_ACCOUNT_EMAIL = "your-service-account@project.iam.gserviceaccount.com"
 NODE_ENV = "development"
 
-# PRODUCTION ENVIRONMENT (for your custom domain)
+# ==========================================================
+# PRODUCTION ENVIRONMENT (for custom domain)
+# ==========================================================
 [env.production]
 workers_dev = false
 zone_id = "your-zone-id-here"
