--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "so-rawan-website",
   "version": "1.0.0",
   "main": "worker/worker.js",
-  "license": "MIT",
   "dependencies": {
-    "google-spreadsheet": "^4.1.5"
+    "google-spreadsheet": "^5.0.2",
+    "google-auth-library": "^9.0.0"
   },
   "scripts": {
     "deploy": "npx wrangler deploy"
